--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="Rob Caluza" content="Chandelier Circus"><!-- CSS-- Styles -->
-    <link rel="stylesheet" href="CSS/mdb.min.css">
-    <link rel="stylesheet" href="CSS/bootstrap.min.css">
-    <link rel="stylesheet" href="CSS/main.css">
+    <link rel="stylesheet" href="css/mdb.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <header data-wow-duration="10s" class="wow fadeIn">
     <h1>Let us Illiuminate your event  </h1>
