--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <header data-wow-duration="10s" class="wow fadeIn">
+  <header data-wow-duration="10s" background="img/chandelierBackground.jpg" class="wow fadeIn">
     <h1>Let us Illiuminate your event  </h1>
   </header>
   <body>
