--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="Rob Caluza" content="Chandelier Circus"><!-- CSS-- Styles -->
-    <link rel="stylesheet" href="CSS/mdb.min.css">
-    <link rel="stylesheet" href="CSS/bootstrap.min.css">
-    <link rel="stylesheet" href="CSS/main.css">
+    <link rel="stylesheet" href="css/mdb.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
-  <header data-wow-duration="10s" class="wow fadeIn">
-    <h1>Let us Illiuminate your event  </h1>
+  <header data-wow-duration="10s" class="wow fadeIn"><img src="img/chandelierBackground.jpg">
+    <h1>Let us Illuminate your Event</h1>
   </header>
   <body>
     <div id="about" class="about">
@@ -46,21 +46,21 @@
       <div class="performingGroup">
         <div id="alisonSect" class="row">
           <h1>Alison</h1>
-          <div class="col-md-6 wow fadeInLeft"><img src="/img/alison.jpg" id="alison"></div>
+          <div class="col-md-6 wow fadeInLeft"><img src="img/alison.jpg" id="alison"></div>
           <div data-wow-duration="2s" id="alisonBio" class="col-md-6 wow fadeIn">
             <p>Alison is a freshman at Illinois State University. She has been training in the circus arts since 2006. She started her training at the Actors Gymnasium in Evanston, Illinois. Prior to circus, she was a competitive rhythmic gymnast at North Shore Rhythmics in Glenview, Illinois. She trained for five years and competed at Nationals three of the five years. Once she discovered the Actors Gymnasium, she retired from rhythmic gymnastics and began training in circus. She has performed in multiple professional shows at the Actors Gymnasium from 2009 to 2014. The most recent performances were The Magical Exploding Boy and the Invisible Circus. Alison is not only an aerialist, but a contortionist as well. She is also capable of doing partner acrobatics, juggling, and unicycling.</p>
           </div>
         </div>
         <div id="cassieSect" class="row">
           <h1>Cassie</h1>
-          <div class="col-md-6 wow rollIn"><img src="/img/cassie.png" id="cassie"></div>
+          <div class="col-md-6 wow rollIn"><img src="img/cassie.png" id="cassie"></div>
           <div id="cassieBio" class="col-md-6">
             <p>Cassie was a competitive gymnast for 8 years and loved every second of it! After she recovered from several injuries, she was looking for a new adventure and she didn’t want to stop performing. Last year, she started watching the performers that came to the gym at which she worked and started trying aerials, which came naturally to her. Circus has become her second chance as a performer; instead of wearing a competition leotard and competing in floor, vault, and beam, she gets to wear sparkly costumes and perform contortion, lyra, and acrobatics.</p>
           </div>
         </div>
         <div id="cornellSect" class="row">
           <h1>Cornell</h1>
-          <div id="cornell" class="col-md-6"><a href="http://www.cornellfreeney.com/" target="_blank"><img src="/img/cornell-1.jpg"></a></div>
+          <div id="cornell" class="col-md-6"><a href="http://www.cornellfreeney.com/" target="_blank"><img src="img/cornell-1.jpg"></a></div>
           <div id="cornellBio" class="col-md-6 wow fadeInRight">
             <p>Cornell started his circus career in middle school and has performed across all of the US and Europe. He has been featured in local commercials, cruise ships, NBA halftime shows, and just performed in a show with Ellie Goulding in Italy. Cornell is available for hire for acrobatics, German wheel, juggling, and diabolo.</p>
           </div>
