--- a/index.html
+++ b/index.html
@@ -11,8 +11,26 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <header data-wow-duration="10s" class="wow fadeIn"><img src="img/chandelierBackground.jpg">
-    <h1>Let us Illuminate your Event</h1>
+  <div class="container">
+    <nav class="navbar navbar-dark black navbar-fixed-top">
+      <button type="button" data-toggle="collapse" data-target="#collapseEx2" class="navbar-toggler hidden-sm-up">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </button>
+      <div class="container"><a href="#home" class="navbar-brand"><img src="img/ChandelierLogo2.jpg"></a>
+        <div id="collapseEx2" class="collapse navbar-toggleable-xs">
+          <ul class="nav navbar-nav">
+            <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="#special" class="nav-link">Special<br>Considerations</a></li>
+            <li class="nav-item"><a href="#performers" class="nav-link">Performers</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
+  <header data-wow-duration="12s" id="home" class="wow fadeIn"><img src="img/chandelierBackground.jpg">
+    <h1 data-wow-duration="25s" class="wow fadeIn">Let us Illuminate your Event</h1>
   </header>
   <body>
     <div id="about" class="about">
@@ -39,7 +57,7 @@
       </div>
     </div>
     <div id="performers" class="performers">
-      <div class="title wow fadeIn">
+      <div class="title wow fadeIn"><img src="img/3_hoops_banner.jpg">
         <h1>The Performers</h1><br>
         <p>An audience member can expect to be blown away by the strength, grace, and professionalism of all of the performers in Chandelier Circus. Like a beautiful crystal chandelier, you can expect your eyes to be drawn to our performances. Clients can also expect to get many compliments on their selection of entertainment for their events. Clients can expect professional, laid-back, easy-to-work-with, fun people who have a passion for performing and are able to provide equipment and ideas for making their events the best they can be! </p>
       </div>
@@ -63,6 +81,90 @@
           <div id="cornell" class="col-md-6"><a href="http://www.cornellfreeney.com/" target="_blank"><img src="img/cornell-1.jpg"></a></div>
           <div id="cornellBio" class="col-md-6 wow fadeInRight">
             <p>Cornell started his circus career in middle school and has performed across all of the US and Europe. He has been featured in local commercials, cruise ships, NBA halftime shows, and just performed in a show with Ellie Goulding in Italy. Cornell is available for hire for acrobatics, German wheel, juggling, and diabolo.</p>
+          </div>
+        </div>
+        <div id="philAndEllenSect" class="row">
+          <h1>Phil & Ellen</h1>
+          <div id="philAndEllen" class="col-md-6 wow fadeInLeft"><img src="img/phillandellen.png" class="img-circle"></div>
+          <div id="philAndEllenBio" class="col-md-6">
+            <p>Phil and Ellen have performed Adagio &#40;partner acrobatics&#41; together for 4 years. They have performed in the Gamma Phi Circus, as well as privately at 115 Bourbon Street and CirqueMania. Phil and Ellen's experience performing together has given them the opportunity to perform at both kids' shows and adult shows in a wide variety of venues. Their background in performing in various settings makes them captivating and impressive to view. Ellen also performs aerial hoop and triple trapeze. Phil has also amazed audiences with his unicycling skills!</p>
+          </div>
+        </div>
+        <div id="jessicaSect" class="row">
+          <h1>Jessica</h1>
+          <div id="jessica" class="col-md-6 wow fadeIn"> <img src="img/jessica-1.png" id="jessicPic"></div>
+          <div id="jessicaBio" class="col-md-6">
+            <p>Jessica performed aerial silks, Spanish webs, lyric hoop, wheel gymnastics, and as a unicycle flyer with the Gamma Phi Circus at Illinois State University for four years in college. She is currently performing aerial silks, webs and lyra with various performance troupes in the Chicago area, while teaching sixth grade in Aurora as a 6th grade reading interventionist, language arts and science teacher, cheerleading coach, and poms coach. Jessica also has experience coaching gymnastics, tumbling, and various other circus acts. Jessica is available for hire for aerial acts.</p>
+          </div>
+        </div>
+        <div id="kyleSect" class="row">
+          <h1>Kyle </h1>
+          <div id="kyle" class="col-md-6"><img src="" id="kylePic"></div>
+          <div id="kyleBio" class="col-md-6">
+            <p>Kyle is an extremely talented Juggler and Unicyclist! He got his start in the circus arts when he joined the Gamma Phi Circus at Illinois State University. Kyle performed in the Gamma Phi Circus from 2010 to 2013 and he performed in both juggling and unicycling acts for all four years. He has experience performing in a variety of venues and events both recreationally and professionally. Not only can he balance himself on just one wheel...he can also do amazing stunts with flyers and juggle while on the unicycle. He was the juggling act captain for three years in the Gamma Phi Circus as well, which speaks to his talent, professionalism, and dedication to the circus arts. Kyle also has experience teaching the circus arts to kids of all ages. Kyle is available for hire for unicycling and juggling. </p>
+          </div>
+        </div>
+        <div id="leahSect" class="row">
+          <h1>Leah </h1>
+          <div id="leah" class="col-md-6"><img src="" id="leahPic"></div>
+          <div id="leahBio" class="col-md-6">
+            <p>Leah is currently in her second year performing with the Gamma Phi Circus at Illinois State University. Before joining Gamma Phi, she was a competitive gymnast for 15 years and competed at the collegiate level for 2 years. Since parting with her gymnastics career, circus has become a passion of hers. With Gamma Phi, she has performed in Lyric Hoop, Tumbling, Russian Swing, Wall Trampoline, and Silks, of which she is currently the act captain. She has also performed her hula hoop act outside of Gamma Phi for different events. She is available to perform hula hoop as a solo act, as well as silks &#40solo&#41; and lyric hoop &#40solo or duo&#41;, equipment permitting.</p>
+          </div>
+        </div>
+        <div id="dangerSect" class="row">
+          <h1>Matt J.</h1>
+          <div id="danger" class="col-md-6"><img src="" id="dangerPic"></div>
+          <div id="dangerBio" class="col-md-6">
+            <p>Matt J. has been performing both professionally and recreationally since 2006. He first learned to juggle in his high school gym class, and has not stopped since! Well-versed in the arts of juggling, unicycling, and clowning, Matt has an unending passion for all things circus. Matt is currently with Illinois State University’s Gamma Phi Circus as a student performer, but has performed as an independent artist for a number of years. Working with groups such as Acrodazzle Entertainment, Elk Grove Gymnastics School, and El Circo Cheapo, his experience speaks for itself. Whether it is performing in an arena for thousands of people or putting on a show for his family, Matt thrives in the spotlight, and cannot wait for the next opportunity to perform! Matt is available for hire for clowning, juggling, and unicycling</p>
+          </div>
+        </div>
+        <div id="mattSect" class="row">
+          <h1>Matt T.</h1>
+          <div id="matt" class="col-md-6"><img src="" id="mattPic"></div>
+          <div id="mattBio" class="col-md-6">
+            <p>Matt T. is a current performer with the Gamma Phi circus. He performs in the acts juggling, unicycles, and clowns. He has performed with the Gamma Phi circus for two years and has showcased his talents in a variety of venues and show formats. He can do various solo juggling tricks with three clubs and can perform walk-around entertainment. He can also do many passing tricks with clubs between two people and even 7 clubs between two people! He enjoys performing in front of crowds and is very personable and good with kids. In his free time, he teaches circus acts to elementary school kids. Aside from juggling, Matt unicycles and can do many juggling tricks while unicycling. He enjoys what he does and loves sharing his talents and passion with others.</p>
+          </div>
+        </div>
+        <div id="MeganSect" class="row">
+          <h1>Megan</h1>
+          <div id="Megan" class="col-md-6"><img src="" id="MeganPic"></div>
+          <div id="MeganBio" class="col-md-6">
+            <p>Megan is from the Naperville/Aurora, Illinois area and has 17 years of gymnastics experience. She became involved in circus arts after joining the Gamma Phi Circus at Illinois State University. She has two years of circus performing experience, including the 2014 and 2015 Gamma Phi Circus Home Shows which hosted an audience of several thousand each night. Megan has also performed in smaller exhibitions where she showcased my talents in Spanish webs, lyric hoop, trapeze, and tumbling. Megan also has experience performing acro and Russian swing! Acts available for hire: Lyra, tumbling, and acro.</p>
+          </div>
+        </div>
+        <div id="NickSect" class="row">
+          <h1>Nick</h1>
+          <div id="Nick" class="col-md-6"><img src="" id="NickPic"></div>
+          <div id="NickBio" class="col-md-6">
+            <p>Nick started his circus career in 2006 in the Gamma Phi Circus at Illinois State University. He is primarily a juggler and really shines when he has a partner he can feed off of. Nick has performed in various shows including travelling shows with the Gamma Phi Circus, stage shows with various troupes in the chicagoland area, provided atmosphere at a wide variety of events, and even performed with an improv troupe in Chicago’s far north suburbs. He also provides rigging assistance for all Chandelier Circus performances. Nick is also able to breathe and eat fire</p>
+          </div>
+        </div>
+        <div id="NikitaSect" class="row">
+          <h1>Nikita</h1>
+          <div id="Nikita" class="col-md-6"><img src="" id="NikitaPic"></div>
+          <div id="NikitaBio" class="col-md-6">
+            <p>Nikita has always embraced her adventurous spirit, which is what drew her to the Gamma Phi Circus in 2007. She was immediately hooked and spent the next four years training and performing unicycles, diabolo, German wheel, and her favorite, tightwire. Some of her other adventures include working on a ranch in New Mexico, exploring the outdoors through scouting, and moving to Minneapolis to work as an actuarial analyst. While there she got involved in the local circus community where she dabbled in other disciplines and taught beginner tightwire workshops. Acts available for hire: unicycle, tightwire (performance and workshop), and diabolo.</p>
+          </div>
+        </div>
+        <div id="RosieSect" class="row">
+          <h1>Rosie</h1>
+          <div id="Rosie" class="col-md-6"><img src="" id="RosiePic"></div>
+          <div id="RosieBio" class="col-md-6">
+            <p>Rosie is a recent graduate of Illinois State University where she performed with the Gamma Phi Circus for most of her college career. Rosie has experience performing professionally in a wide variety of venues including nightclubs, arenas, theaters, casinos, and outdoor venues. Rosie has also trained at a circus school in the Chicago area. She has performed a wide array of acts including bike built for ten, unicycle adagio, triangle trapeze, acro, Spanish webs, silks, lyra, and German wheel. She is available for hire for aerial performances.</p>
+          </div>
+        </div>
+        <div id="SallySect" class="row">
+          <h1>Sally</h1>
+          <div id="Sally" class="col-md-6"><img src="" id="SallyPic"></div>
+          <div id="SallyBio" class="col-md-6">
+            <p>Sally got her start in circus in college where she was part of Illinois State University's Gamma Phi Circus. She performed multiple trapeze, silks, Spanish web, lyric hoop, acro, and was a flyer for unicycles. She also coached at Gamma Phi's summer camp and their junior circus. She gained a love of sewing and costume design during her years with Gamma Phi. Sally now works in sales and performs circus in her free time. Sally is available for hire for aerial acts.</p>
+          </div>
+        </div>
+        <div id="TylerSect" class="row">
+          <h1>Tyler</h1>
+          <div id="Tyler" class="col-md-6"><img src="" id="TylerPic"></div>
+          <div id="TylerBio" class="col-md-6">
+            <p>Tyler has been performing within the circus arts for many years now as both a juggler and an acrobat. Before his circus career, Tyler was an avid parkour freerunner which translated well into his acrobatic performance. In 2012, Tyler joined the Gamma Phi Circus at Illinois State University as a performer in the tumbling/vaulting, juggling, Russian swing, and teeterboard acts. Through developing his skills and deepening his passion over the years, he has performed for both small community audiences to large arena venues. Acts available for hire: juggling, tumbling and acro.</p>
           </div>
         </div>
       </div>
